# cloud-artifact-consumer

./: .gitignore  .projenrc.ts  Pipfile  README.md  cdk.json  package.json  pyproject.toml  requirements.txt  template.yaml
.projen/: deps.json  tasks.json
clean_bucket/: function.py
copy_files/: function.py  requirements.txt
init_set_trigger/: function.py  requirements.txt
specs/: bamboo-plan-template.yml  build-artifact-consumer.yaml  placeholders-template.yaml
src/: main.ts  pipeline.ts
src/lambdas/copy_files/: index.py
tests/unit/: test_template.py
tests/unit/clean_bucket/: test_clean_bucket.py
tests/unit/copy_files/: test_copy_files.py
tests/unit/init_set_trigger/: test_init_set_trigger.py
