[tool.poetry]
name = "cloud-artifact-consumer"
version = "0.1.0"
description = ""
authors = ["OrdonioSa <sascha.ordonio@tt-s.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "*"
cfnresponse = "*"
requests = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-mock = "*"
coverage = "*"
moto = "*"
responses = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
